# git-tg-bot

./: .gitignore  Makefile  README  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  main.py
bot/handlers/: add.py  commands.py  keyboards.py  start.py
bot/utils/: __init__.py
services/: build.gradle.kts  settings.gradle.kts
services/API-Service/: build.gradle  settings.gradle
services/API-Service/datasets/: github_comments_38425-38831_2026-01-08_22-26-43.json  github_comments_38425-38925_2026-01-08_22-16-15.json  github_comments_38425-38925_2026-01-08_22-22-03.json  (+3 more)
services/Action-Service/: build.gradle  settings.gradle
services/AuthService/: .dockerignore  Dockerfile  build.gradle  docker-compose.yml
services/BotService/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
services/CommonWorker/: build.gradle  settings.gradle
services/CoreService/: .dockerignore  Dockerfile  build.gradle  settings.gradle
services/DB-Service/: settings.gradle
services/GithubService/: Dockerfile  HELP.md  build.gradle.kts  settings.gradle.kts
services/Handle-Service/: build.gradle  settings.gradle
services/ML-Service/: main.py  pyproject.toml
services/StackoverflowService/: Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
services/UpdateProcerssor/: Dockerfile  HELP.md  build.gradle.kts  settings.gradle.kts
services/UpdateProcessor/: Dockerfile  build.gradle  settings.gradle
services/common/: build.gradle.kts  gradle.properties  settings.gradle.kts
(+146 files in other folders)
