[project]
name = "git-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]
